Choose service callback [+] - add choose of services [!] - zipping json callback data size